src/css/blocks/nav.scss
.nav {
    display: inline-flex;
    margin: 0;
    padding: 0;
    list-style-type: none;

    &__link {
        @extend %transition;
        display: block;
        outline: none;
        padding: 8px 16px;
        text-decoration: none;
        color: $color-white;
        border-bottom: 2px solid transparent;

        &:hover,
        &:focus {
            color: $color-white-darker;
            border-bottom-color: currentColor;
        }

        &:active {
            color: $color-white-darkest;
            border-bottom-color: currentColor;
        }
    }
}

@media (max-width: 768px) {
    .nav {
        flex-wrap: wrap;
        justify-content: center;
    }
}

